Fix img attachment preview overflow

--- a/eml-client/global.scss
+++ b/eml-client/global.scss
@@ -15,6 +15,10 @@ body {
   height: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 .dropdown-toggle.disabled::after {
   visibility: hidden;
 }
